# gglib-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RemoveCoM.c  addAll_CMakeLists.txt  computeMSD.c  config.toml
Oscillatore_Smorzato/: CMakeLists.txt  InputGeneratorAndAnalysis.ipynb
Oscillatore_Smorzato/include/: IO.h  integrator.h  physics.h
Oscillatore_Smorzato/src/: IO.c  integrator.c  oscill.c  physics.c
include/: gg_io.h  gg_mem.h
src/: CMakeLists.txt  gg_io.c  gg_math.c  gg_mem.c
src/CircularBuffer/: CMakeLists.txt  CircularBuffer.c  CircularBuffer.h  CircularBuffer_template.h
src/PingPongBuffer/: CMakeLists.txt  PingPongBuffer.c  PingPongBuffer.h  PingPongBuffer_template.h
src/config_parser/: CMakeLists.txt  configParser.c  configParser.h
src/gg_math/: CMakeLists.txt  gg_math.c  gg_math.h
src/integrators/rungekutta4/: CMakeLists.txt  integrators.c  integrators.h
src/integrators/rungekutta4/tests/: RK4.c
src/lammps/: CMakeLists.txt
src/lammps/lammpstrjIO/: CMakeLists.txt  README.md  lammpstrjIO.c  lammpstrjIO.h
src/lammps_utils/: CMakeLists.txt  LAMMPSParser.c  LAMMPSParser.h  analysis.c  analysis.h  parser.c  parser.h
src/msd/: CMakeLists.txt  msd.c  msd.h
src/rarray/: CMakeLists.txt  README.md  rarray.c  rarray.h  rarray_template.h
src/utils/: CMakeLists.txt  fileutils.c  fileutils.h  memutils.h
